# envoy_translater

./: .gitignore  README.md  db.sqlite3  manage.py  package_readme.rst  requirements.txt  setup.cfg
envoy/admin/v2alpha/: clusters_pb2.py  config_dump_pb2.py  memory_pb2.py  mutex_stats_pb2.py  server_info_pb2.py  tap_pb2.py
envoy/admin/v3/: config_dump_shared_pb2.py  metrics_pb2.py  mutex_stats_pb2.py
envoy/api/v2/: cds_pb2.py  cluster_pb2.py  discovery_pb2.py  endpoint_pb2.py  lds_pb2.py  rds_pb2.py  route_pb2.py  scoped_route_pb2.py  srds_pb2.py
envoy/api/v2/auth/: cert_pb2.py  secret_pb2.py
envoy/type/: http_pb2.py  http_status_pb2.py  range_pb2.py  semantic_version_pb2.py
envoy/type/matcher/: string_pb2.py  value_pb2.py
envoy/type/v3/: hash_policy_pb2.py  range_pb2.py  ratelimit_strategy_pb2.py  token_bucket_pb2.py
envoy/watchdog/v3/: abort_action_pb2.py
envoy_translater/: exceptions.py  settings.py  urls.py
envoy_translater/api/: exception_handler.py  urls.py  views.py
envoy_translater/config/: __init__.py
envoy_translater/grpc/: callback.py
envoy_translater/listeners/: models.py
envoy_translater/listeners/migrations/: 0001_initial.py
envoy_translator/: __init__.py  settings.py  urls.py  version.py  wsgi.py
envoy_translator/api/: exception_handler.py  urls.py  views.py
envoy_translator/config/: __init__.py  django.py  identity.py
envoy_translator/listeners/: models.py
envoy_translator/listeners/migrations/: 0001_initial.py  0002_auto_20240413_0645.py
sample/: sample.yaml
utils/: setup_protobuf.py
(+486 files in other folders)
