[metadata]
name = envoy_translator
author = Siyeong Song
author_email = cyoung06@naver.com
summary = A service to provide envoy configs for access to internal vms from external ip
description_file = package_readme.rst
description_content_type = text/x-rst; charset=UTF-8
home_page = https://github.com/semicolon_cloud/envoy_translator
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Framework :: Django :: 3.2
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Environment :: OpenStack

keywords =
    openstack
    dns
    external
    registration

[files]
packages =
    envoy_translator

[entry_points]
console_scripts =
    envoy-translator-api = envoy_translator:management_command

